rs/macros/tests/ui/gprogram_fails_for_service_multiple_export_attributes_are_not_allowed.stderr
error: multiple `export` attributes are not allowed for the same method
  --> tests/ui/gprogram_fails_for_service_multiple_export_attributes_are_not_allowed.rs:10:7
   |
10 |     #[export(route = "svc2")]
   |       ^^^^^^
